--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -87,7 +87,7 @@ CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_PSI=y
 # CONFIG_PSI_DEFAULT_DISABLED is not set
-CONFIG_PSI_FTRACE=y
+# CONFIG_PSI_FTRACE is not set
 CONFIG_CPU_ISOLATION=y
 
 #
