clover_defconfig: Remove unused config
CONFIG_EFI is not set
CONFIG_PANIC_ON_REFCOUNT_ERROR is not set
CONFIG_CHR_DEV_SCH is not set
CONFIG_VGA_ARB is not set
CONFIG_QCOM_MINIDUMP is not set

Bug: 144962059
Test: build and boot to home
Change-Id: I965816dd9dfed0ada460844e5e7f82848e781f6b
Signed-off-by: Chiawei Wang <chiaweiwang@google.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -320,7 +320,6 @@ CONFIG_PCI_LOCKLESS_CONFIG=y
 # CONFIG_PCI_IOV is not set
 # CONFIG_PCI_PRI is not set
 # CONFIG_PCI_PASID is not set
-CONFIG_PCI_LABEL=y
 # CONFIG_HOTPLUG_PCI is not set
 
 #
@@ -476,9 +475,7 @@ CONFIG_CMDLINE="cgroup_disable=pressure"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
-CONFIG_EFI_STUB=y
-CONFIG_EFI=y
-CONFIG_DMI=y
+# CONFIG_EFI is not set
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_IMG_GZ_DTB=y
 # CONFIG_IMG_DTB is not set
@@ -575,8 +572,6 @@ CONFIG_ARM_PSCI_FW=y
 # CONFIG_ARM_SCPI_PROTOCOL is not set
 # CONFIG_ARM_SDE_INTERFACE is not set
 # CONFIG_FIRMWARE_MEMMAP is not set
-CONFIG_DMIID=y
-# CONFIG_DMI_SYSFS is not set
 # CONFIG_FW_CFG_SYSFS is not set
 CONFIG_QCOM_SCM=y
 CONFIG_QCOM_SCM_64=y
@@ -585,23 +580,8 @@ CONFIG_HAVE_ARM_SMCCC=y
 # CONFIG_GOOGLE_FIRMWARE is not set
 
 #
-# EFI (Extensible Firmware Interface) Support
-#
-# CONFIG_EFI_VARS is not set
-CONFIG_EFI_ESRT=y
-CONFIG_EFI_PARAMS_FROM_FDT=y
-CONFIG_EFI_RUNTIME_WRAPPERS=y
-CONFIG_EFI_ARMSTUB=y
-CONFIG_EFI_ARMSTUB_DTB_LOADER=y
-# CONFIG_EFI_CAPSULE_LOADER is not set
-# CONFIG_EFI_TEST is not set
-# CONFIG_RESET_ATTACK_MITIGATION is not set
-
-#
 # Tegra firmware driver
 #
-CONFIG_ARCH_SUPPORTS_ACPI=y
-# CONFIG_ACPI is not set
 # CONFIG_VIRTUALIZATION is not set
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA256_ARM64=y
@@ -799,7 +779,7 @@ CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
 CONFIG_STRICT_MODULE_RWX=y
 CONFIG_REFCOUNT_FULL=y
-CONFIG_PANIC_ON_REFCOUNT_ERROR=y
+# CONFIG_PANIC_ON_REFCOUNT_ERROR is not set
 CONFIG_ARCH_HAS_RELR=y
 CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG=y
 CONFIG_LLVM_POLLY=y
@@ -1892,7 +1872,7 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_CHR_DEV_OSST is not set
 # CONFIG_BLK_DEV_SR is not set
 CONFIG_CHR_DEV_SG=y
-CONFIG_CHR_DEV_SCH=y
+# CONFIG_CHR_DEV_SCH is not set
 CONFIG_SCSI_CONSTANTS=y
 # CONFIG_SCSI_LOGGING is not set
 CONFIG_SCSI_SCAN_ASYNC=y
@@ -3618,8 +3598,7 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 #
 # Graphics support
 #
-CONFIG_VGA_ARB=y
-CONFIG_VGA_ARB_MAX_GPUS=16
+# CONFIG_VGA_ARB is not set
 # CONFIG_DRM is not set
 # CONFIG_DRM_DP_CEC is not set
 
@@ -3658,7 +3637,6 @@ CONFIG_FB_ARMCLCD=y
 # CONFIG_FB_CYBER2000 is not set
 # CONFIG_FB_ASILIANT is not set
 # CONFIG_FB_IMSTT is not set
-# CONFIG_FB_EFI is not set
 # CONFIG_FB_OPENCORES is not set
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_NVIDIA is not set
@@ -4563,7 +4541,6 @@ CONFIG_RTC_I2C_AND_SPI=y
 # CONFIG_RTC_DRV_DS1685_FAMILY is not set
 # CONFIG_RTC_DRV_DS1742 is not set
 # CONFIG_RTC_DRV_DS2404 is not set
-# CONFIG_RTC_DRV_EFI is not set
 # CONFIG_RTC_DRV_STK17TA8 is not set
 # CONFIG_RTC_DRV_M48T86 is not set
 # CONFIG_RTC_DRV_M48T35 is not set
@@ -5008,9 +4985,7 @@ CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_BOOT_STATS=y
 # CONFIG_QCOM_DCC_V2 is not set
 # CONFIG_QCOM_EUD is not set
-CONFIG_QCOM_MINIDUMP=y
-# CONFIG_QCOM_DYN_MINIDUMP_STACK is not set
-CONFIG_MINIDUMP_MAX_ENTRIES=200
+# CONFIG_QCOM_MINIDUMP is not set
 # CONFIG_QCOM_APR is not set
 CONFIG_MSM_CORE_HANG_DETECT=y
 CONFIG_MSM_GLADIATOR_HANG_DETECT=y
@@ -5670,7 +5645,6 @@ CONFIG_TMPFS_XATTR=y
 CONFIG_MEMFD_CREATE=y
 CONFIG_ARCH_HAS_GIGANTIC_PAGE=y
 CONFIG_CONFIGFS_FS=y
-CONFIG_EFIVAR_FS=m
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ORANGEFS_FS is not set
 # CONFIG_ADFS_FS is not set
@@ -6110,7 +6084,6 @@ CONFIG_CLZ_TAB=y
 CONFIG_MPILIB=y
 CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
-CONFIG_UCS2_STRING=y
 CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
 CONFIG_GENERIC_COMPAT_VDSO=y
