--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -6070,6 +6070,7 @@ CONFIG_LOCK_DEBUGGING_SUPPORT=y
 CONFIG_STACKTRACE=y
 # CONFIG_WARN_ALL_UNSEEDED_RANDOM is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
+CONFIG_DEBUG_LIST=y
 
 #
 # RCU Debugging
@@ -6121,7 +6122,7 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_MEMINIT is not set
 # CONFIG_TEST_STACKINIT is not set
 # CONFIG_MEMTEST is not set
-# CONFIG_BUG_ON_DATA_CORRUPTION is not set
+CONFIG_BUG_ON_DATA_CORRUPTION=y
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_CC_WERROR is not set
 # CONFIG_SAMPLES is not set
