clover_defconfig: Align with security requirements
CONFIG_ARCH_MMAP_RND_BITS=24
CONFIG_PANIC_ON_OOPS=y

- set CONFIG_ARCH_MMAP_RND_BITS=24
- enable CONFIG_PANIC_OOPS

Change-Id: I38067483296d6e03285d3373471520dbf2ef9eb8
Signed-off-by: Yueyao Zhu <yueyao@google.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -6051,8 +6051,8 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 #
 # Debug Lockups and Hangs
 #
-# CONFIG_PANIC_ON_OOPS is not set
-CONFIG_PANIC_ON_OOPS_VALUE=0
+CONFIG_PANIC_ON_OOPS=y
+CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
