--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -3600,7 +3600,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
-CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+# CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
