--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -226,7 +226,6 @@ CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
-CONFIG_TRACEPOINTS=y
 CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_MMU=y
@@ -1488,7 +1487,6 @@ CONFIG_SOCKEV_NLMCAST=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
-# CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 CONFIG_BT=y
@@ -5760,7 +5758,6 @@ CONFIG_SYSTEM_TRUSTED_KEYS="verity.x509.pem"
 # CONFIG_SYSTEM_EXTRA_CERTIFICATE is not set
 # CONFIG_SECONDARY_TRUSTED_KEYRING is not set
 # CONFIG_SYSTEM_BLACKLIST_KEYRING is not set
-CONFIG_BINARY_PRINTF=y
 
 #
 # Library routines
@@ -5949,21 +5946,14 @@ CONFIG_DEBUG_LIST=y
 #
 CONFIG_RCU_CPU_STALL_TIMEOUT=21
 CONFIG_RCU_PANIC_ON_STALL=1
-CONFIG_NOP_TRACER=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
 CONFIG_HAVE_C_RECORDMCOUNT=y
-CONFIG_TRACE_CLOCK=y
-CONFIG_RING_BUFFER=y
-CONFIG_EVENT_TRACING=y
-CONFIG_CONTEXT_SWITCH_TRACER=y
-CONFIG_IPC_LOGGING=y
+# CONFIG_IPC_LOGGING is not set
 # CONFIG_QCOM_RTB is not set
-CONFIG_TRACING=y
-CONFIG_GENERIC_TRACER=y
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
 # CONFIG_DMA_API_DEBUG is not set
