--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -3392,7 +3392,7 @@ CONFIG_FB_MODE_HELPERS=y
 #
 # CONFIG_FB_CIRRUS is not set
 # CONFIG_FB_PM2 is not set
-CONFIG_FB_ARMCLCD=y
+# CONFIG_FB_ARMCLCD is not set
 # CONFIG_FB_CYBER2000 is not set
 # CONFIG_FB_ASILIANT is not set
 # CONFIG_FB_IMSTT is not set
@@ -3462,7 +3462,6 @@ CONFIG_BACKLIGHT_LP855X=y
 # CONFIG_BACKLIGHT_LV5207LP is not set
 # CONFIG_BACKLIGHT_BD6107 is not set
 # CONFIG_BACKLIGHT_ARCXCNN is not set
-CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_HDMI=y
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
