--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4499,7 +4499,7 @@ CONFIG_COMMON_CLK=y
 # CONFIG_COMMON_CLK_CDCE925 is not set
 # CONFIG_COMMON_CLK_CS2000_CP is not set
 # CONFIG_CLK_QORIQ is not set
-CONFIG_COMMON_CLK_XGENE=y
+# CONFIG_COMMON_CLK_XGENE is not set
 # CONFIG_COMMON_CLK_PWM is not set
 # CONFIG_COMMON_CLK_VC5 is not set
 CONFIG_MDSS_PLL=y
