clover_defconfig: Disable RAS
CONFIG_RAS is not set

RAS has been living in its shell as EDAC's placeholder dependency [1].
Since EDAC is disabled, disable RAS too.

[1]: EmanuelCN/kernel_xiaomi_sm8250@fc27ae33a5a095

Signed-off-by: Tashfin Shakeer Rhythm <tashfinshakeerrhythm@gmail.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4175,7 +4175,6 @@ CONFIG_LEDS_TRIGGERS=y
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_EDAC_SUPPORT=y
-# CONFIG_EDAC is not set
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_HCTOSYS=y
@@ -5204,7 +5203,7 @@ CONFIG_ARM_PMU=y
 CONFIG_QCOM_L2_COUNTERS=y
 # CONFIG_QCOM_LLCC_PMU is not set
 # CONFIG_ARM_SPE_PMU is not set
-CONFIG_RAS=y
+# CONFIG_RAS is not set
 
 #
 # Android
