--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4414,7 +4414,7 @@ CONFIG_ASHMEM=y
 # CONFIG_ANDROID_VSOC is not set
 CONFIG_ION=y
 CONFIG_ION_LEGACY=y
-# CONFIG_ION_SYSTEM_HEAP is not set
+CONFIG_ION_SYSTEM_HEAP=y
 # CONFIG_ION_CARVEOUT_HEAP is not set
 # CONFIG_ION_CHUNK_HEAP is not set
 # CONFIG_ION_CMA_HEAP is not set
