--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1440,11 +1440,11 @@ CONFIG_NET_ACT_GACT=y
 CONFIG_NET_ACT_MIRRED=y
 # CONFIG_NET_ACT_SAMPLE is not set
 # CONFIG_NET_ACT_IPT is not set
-# CONFIG_NET_ACT_NAT is not set
-# CONFIG_NET_ACT_PEDIT is not set
+CONFIG_NET_ACT_NAT=y
+CONFIG_NET_ACT_PEDIT=y
 # CONFIG_NET_ACT_SIMP is not set
 CONFIG_NET_ACT_SKBEDIT=y
-# CONFIG_NET_ACT_CSUM is not set
+CONFIG_NET_ACT_CSUM=y
 # CONFIG_NET_ACT_VLAN is not set
 CONFIG_NET_ACT_BPF=y
 # CONFIG_NET_ACT_CONNMARK is not set
