clover_defconfig: Enable IIO buffer callback and trigger support
CONFIG_IIO_BUFFER=y
CONFIG_IIO_BUFFER_CB=y
CONFIG_IIO_KFIFO_BUF=y
CONFIG_IIO_TRIGGER=y

Change-Id: I19f1a98ac62853ecb0cc4e7431430d6766bfa631
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4789,9 +4789,13 @@ CONFIG_EXTCON_GPIO=y
 # CONFIG_EXTCON_USB_GPIO is not set
 # CONFIG_MEMORY is not set
 CONFIG_IIO=y
-# CONFIG_IIO_BUFFER is not set
+CONFIG_IIO_BUFFER=y
+CONFIG_IIO_BUFFER_CB=y
+# CONFIG_IIO_BUFFER_HW_CONSUMER is not set
+CONFIG_IIO_KFIFO_BUF=y
 # CONFIG_IIO_CONFIGFS is not set
-# CONFIG_IIO_TRIGGER is not set
+CONFIG_IIO_TRIGGER=y
+CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 # CONFIG_IIO_SW_DEVICE is not set
 # CONFIG_IIO_SW_TRIGGER is not set
 
@@ -5075,6 +5079,12 @@ CONFIG_QCOM_SPMI_VADC=y
 #
 # Inclinometer sensors
 #
+
+#
+# Triggers - standalone
+#
+# CONFIG_IIO_INTERRUPT_TRIGGER is not set
+# CONFIG_IIO_SYSFS_TRIGGER is not set
 
 #
 # Digital potentiometers
