--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4000,6 +4000,7 @@ CONFIG_USB_F_RNDIS=y
 CONFIG_USB_F_QCRNDIS=y
 CONFIG_USB_F_MASS_STORAGE=y
 CONFIG_USB_F_FS=y
+CONFIG_USB_F_UVC=y
 CONFIG_USB_F_MIDI=y
 CONFIG_USB_F_HID=y
 CONFIG_USB_F_DIAG=y
@@ -4034,7 +4035,7 @@ CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
 # CONFIG_USB_CONFIGFS_F_UAC2 is not set
 CONFIG_USB_CONFIGFS_F_MIDI=y
 CONFIG_USB_CONFIGFS_F_HID=y
-# CONFIG_USB_CONFIGFS_F_UVC is not set
+CONFIG_USB_CONFIGFS_F_UVC=y
 # CONFIG_USB_CONFIGFS_F_PRINTER is not set
 CONFIG_USB_CONFIGFS_F_DIAG=y
 CONFIG_USB_CONFIGFS_F_CDEV=y
