clover_defconfig: Enable macsec
CONFIG_MACSEC=y

This is needed for Volvo Cars

Bug: 224999021

Signed-off-by: Victor Shutemov <victor@haleytek.com>
Change-Id: I61fb2388524ba9efa6cd34873d91dd7cc9fe246e

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1927,7 +1927,7 @@ CONFIG_WIREGUARD=y
 # CONFIG_VXLAN is not set
 # CONFIG_GENEVE is not set
 # CONFIG_GTP is not set
-# CONFIG_MACSEC is not set
+CONFIG_MACSEC=y
 # CONFIG_NETCONSOLE is not set
 CONFIG_TUN=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
