clover_defconfig: Enable powercap framework
CONFIG_POWERCAP=y

It enables the power capping sysfs interface for
different power zone devices.

Bug: 220884335
Change-Id: I11bc3efe06d2a02dcc602d223d3e6757088ca771
Signed-off-by: Manaf Meethalavalappu Pallikunhi <quic_manafm@quicinc.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -5203,7 +5203,8 @@ CONFIG_GENERIC_PHY=y
 # CONFIG_PHY_QCOM_QMP is not set
 # CONFIG_PHY_QCOM_QUSB2 is not set
 CONFIG_PHY_QCOM_UFS=y
-# CONFIG_POWERCAP is not set
+CONFIG_POWERCAP=y
+# CONFIG_IDLE_INJECT is not set
 # CONFIG_MCB is not set
 
 #
