--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4601,7 +4601,8 @@ CONFIG_IOMMU_SUPPORT=y
 CONFIG_IOMMU_IO_PGTABLE=y
 CONFIG_IOMMU_IO_PGTABLE_LPAE=y
 # CONFIG_IOMMU_IO_PGTABLE_LPAE_SELFTEST is not set
-# CONFIG_IOMMU_IO_PGTABLE_ARMV7S is not set
+CONFIG_IOMMU_IO_PGTABLE_ARMV7S=y
+# CONFIG_IOMMU_IO_PGTABLE_ARMV7S_SELFTEST is not set
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 # CONFIG_IOMMU_IO_PGTABLE_FAST_SELFTEST is not set
 # CONFIG_IOMMU_IO_PGTABLE_FAST_PROVE_TLB is not set
