clover_defconfig: Enable CONFIG_LED_TRIGGER_PHY
CONFIG_LED_TRIGGER_PHY=y

Enable CONFIG_LED_TRIGGER_PHY to support for tracking link state.
This also makes GKI on arm64 consistent with GKI on x86.

This could affect KMI breakage by changing struct phy_device,
so it should be fixed until KMI freeze.

Bug: 278043288
Change-Id: I6cd976de7de2a3518434cf8ca5eaf691e40047a3
Signed-off-by: Norihiko Hama <Norihiko.Hama@alpsalpine.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -2025,7 +2025,7 @@ CONFIG_MDIO_BUS=y
 # CONFIG_MDIO_THUNDER is not set
 CONFIG_PHYLIB=y
 CONFIG_SWPHY=y
-# CONFIG_LED_TRIGGER_PHY is not set
+CONFIG_LED_TRIGGER_PHY=y
 
 #
 # MII PHY device drivers
