clover_defconfig: Enable USB C DP alternate mode support
CONFIG_TYPEC_DP_ALTMODE=y

CONFIG_TYPEC_DP_ALTMODE: DisplayPort Alternate Mode driver

DisplayPort USB Type-C Alternate Mode allows DisplayPort
displays and adapters to be attached to the USB Type-C
connectors on the system.

Bug: 273310676
Test: TH
Change-Id: Iedde3b15911674161a5a5aa658afdce26aa6d2fe
Signed-off-by: Ramji Jiyani <ramjiyani@google.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4319,7 +4319,7 @@ CONFIG_TYPEC=y
 #
 # USB Type-C Alternate Mode drivers
 #
-# CONFIG_TYPEC_DP_ALTMODE is not set
+CONFIG_TYPEC_DP_ALTMODE=y
 # CONFIG_USB_ROLE_SWITCH is not set
 
 #
