--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1040,6 +1040,7 @@ CONFIG_IP_ROUTE_VERBOSE=y
 CONFIG_NET_IPGRE_DEMUX=y
 CONFIG_NET_IP_TUNNEL=y
 # CONFIG_NET_IPGRE is not set
+CONFIG_IP_MROUTE_COMMON=y
 # CONFIG_IP_MROUTE is not set
 CONFIG_SYN_COOKIES=y
 CONFIG_NET_IPVTI=y
@@ -1109,7 +1110,9 @@ CONFIG_IPV6_TUNNEL=y
 # CONFIG_IPV6_GRE is not set
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_SUBTREES=y
-# CONFIG_IPV6_MROUTE is not set
+CONFIG_IPV6_MROUTE=y
+# CONFIG_IPV6_MROUTE_MULTIPLE_TABLES is not set
+# CONFIG_IPV6_PIMSM_V2 is not set
 # CONFIG_IPV6_SEG6_LWTUNNEL is not set
 # CONFIG_IPV6_SEG6_HMAC is not set
 CONFIG_NETLABEL=y
