--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1018,6 +1018,7 @@ CONFIG_UNIX_SCM=y
 # CONFIG_UNIX_DIAG is not set
 # CONFIG_TLS is not set
 CONFIG_XFRM=y
+CONFIG_XFRM_OFFLOAD=y
 CONFIG_XFRM_ALGO=y
 CONFIG_XFRM_USER=y
 CONFIG_XFRM_INTERFACE=y
@@ -1049,7 +1050,7 @@ CONFIG_NET_UDP_TUNNEL=y
 # CONFIG_NET_FOU_IP_TUNNELS is not set
 CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
-# CONFIG_INET_ESP_OFFLOAD is not set
+CONFIG_INET_ESP_OFFLOAD=y
 CONFIG_INET_IPCOMP=y
 CONFIG_INET_TABLE_PERTURB_ORDER=16
 CONFIG_INET_XFRM_TUNNEL=y
@@ -1092,7 +1093,7 @@ CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
 CONFIG_INET6_AH=y
 CONFIG_INET6_ESP=y
-# CONFIG_INET6_ESP_OFFLOAD is not set
+CONFIG_INET6_ESP_OFFLOAD=y
 CONFIG_INET6_IPCOMP=y
 CONFIG_IPV6_MIP6=y
 # CONFIG_IPV6_ILA is not set
