clover_defconfig: Enable config for BAM DMA
CONFIG_QCOM_BAM_DMA=y

Enable config for BAM DMA for slimbus driver.

Change-Id: Iaf7d6365bf89021b5d8c5ad5160f6a04b28832b9
Signed-off-by: Viken Dadhaniya <quic_vdadhani@quicinc.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4579,7 +4579,7 @@ CONFIG_DMA_OF=y
 CONFIG_QCOM_SPS_DMA=y
 # CONFIG_XILINX_DMA is not set
 # CONFIG_XILINX_ZYNQMP_DMA is not set
-# CONFIG_QCOM_BAM_DMA is not set
+CONFIG_QCOM_BAM_DMA=y
 # CONFIG_QCOM_HIDMA_MGMT is not set
 # CONFIG_QCOM_HIDMA is not set
 CONFIG_QCOM_GPI_DMA=y
