--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -4263,6 +4263,7 @@ CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
 CONFIG_USB_U_ETHER=y
+CONFIG_USB_U_AUDIO=y
 CONFIG_USB_F_NCM=y
 CONFIG_USB_F_SUBSET=y
 CONFIG_USB_RNDIS=y
@@ -4270,6 +4271,7 @@ CONFIG_USB_F_RNDIS=y
 CONFIG_USB_F_QCRNDIS=y
 CONFIG_USB_F_MASS_STORAGE=y
 CONFIG_USB_F_FS=y
+CONFIG_USB_F_UAC2=y
 CONFIG_USB_F_UVC=y
 CONFIG_USB_F_MIDI=y
 CONFIG_USB_F_HID=y
@@ -4302,7 +4304,7 @@ CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
 # CONFIG_USB_CONFIGFS_F_UAC1 is not set
 # CONFIG_USB_CONFIGFS_F_UAC1_LEGACY is not set
-# CONFIG_USB_CONFIGFS_F_UAC2 is not set
+CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_MIDI=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_USB_CONFIGFS_F_UVC=y
