clover_defconfig: Enable IPVLAN
CONFIG_IPVLAN=y
CONFIG_IPVTAP=y

The last CL enabled the dependencies for IPVLAN, but not
the config itself. So enable CONFIG_IPVLAN.

BUG=chromium:860874
TEST=emerge-tael chromeos-kernel-4_14
TBR=dgreid

Change-Id: I4c6af7cf88e7a6a0237f7eb01ddda3226cc9711d
Signed-off-by: Stephen Barber <smbarber@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/1144786

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1477,7 +1477,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NET_NSH is not set
 # CONFIG_HSR is not set
 # CONFIG_NET_SWITCHDEV is not set
-# CONFIG_NET_L3_MASTER_DEV is not set
+CONFIG_NET_L3_MASTER_DEV=y
 CONFIG_QRTR=y
 CONFIG_QRTR_WAKEUP_MS=0
 CONFIG_QRTR_SMD=y
@@ -1931,16 +1931,19 @@ CONFIG_WIREGUARD=y
 # CONFIG_IFB is not set
 # CONFIG_NET_TEAM is not set
 # CONFIG_MACVLAN is not set
-# CONFIG_IPVLAN is not set
+CONFIG_IPVLAN=y
+CONFIG_IPVTAP=y
 # CONFIG_VXLAN is not set
 # CONFIG_GENEVE is not set
 # CONFIG_GTP is not set
 CONFIG_MACSEC=y
 # CONFIG_NETCONSOLE is not set
 CONFIG_TUN=y
+CONFIG_TAP=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=y
 # CONFIG_NLMON is not set
+# CONFIG_NET_VRF is not set
 # CONFIG_ARCNET is not set
 
 #
