clover_defconfig: Enable SIP ALG in netfilter
CONFIG_NF_CONNTRACK_SIP=y

enable NF_CONNTRACK_SIP and NF_CONNTRACK_SIP_SEGMENTATION

Change-Id: I4b36fdcefa57fbcdd06e90ae189c0f9eb25fe9aa
Signed-off-by: Ruixuan Gu <quic_ruixgu@quicinc.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1161,7 +1161,7 @@ CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 # CONFIG_NF_CONNTRACK_SNMP is not set
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
-# CONFIG_NF_CONNTRACK_SIP is not set
+CONFIG_NF_CONNTRACK_SIP=y
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 # CONFIG_NETFILTER_NETLINK_GLUE_CT is not set
@@ -1173,6 +1173,7 @@ CONFIG_NF_NAT_PROTO_SCTP=y
 CONFIG_NF_NAT_AMANDA=y
 CONFIG_NF_NAT_FTP=y
 CONFIG_NF_NAT_IRC=y
+CONFIG_NF_NAT_SIP=y
 CONFIG_NF_NAT_TFTP=y
 CONFIG_NF_NAT_REDIRECT=y
 # CONFIG_NF_TABLES is not set
