clover_defconfig: Enable CONFIG_SPI_SLAVE=y
CONFIG_SPI_SLAVE=y

The SPI[1] is a synchronous four wire serial link used to connect
microcontrollers to sensors, memory, and peripherals.
SPI_SLAVE[2] supports SPI slave controller to the Linux SPI subsystem.
In order to support the feature from GKI kernel, we need to enable SPI_SLAVE.

[1]: https://www.kernel.org/doc/html/latest/spi/spi-summary.html
[2]: https://lwn.net/Articles/723440/

Bug: 316768184
Signed-off-by: Bumyong Lee <bumyong.lee@samsung.com>
Change-Id: I1802e7e67b9cf12b2b4eaec638728f1e56382ee0

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -2568,7 +2568,10 @@ CONFIG_SPI_QUP=y
 CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_LOOPBACK_TEST is not set
 # CONFIG_SPI_TLE62X0 is not set
-# CONFIG_SPI_SLAVE is not set
+CONFIG_SPI_SLAVE=y
+# CONFIG_SPI_SLAVE_TIME is not set
+# CONFIG_SPI_SLAVE_SYSTEM_CONTROL is not set
+CONFIG_SPI_DYNAMIC=y
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 # CONFIG_SPMI_MSM_PMIC_ARB_DEBUG is not set
