clover_defconfig: Enable EROFS and CEPH configs for WSL
CONFIG_CEPH_LIB=y
CONFIG_CEPH_FS=y
CONFIG_CEPH_FS_POSIX_ACL=y

CONFIG_CEPH* flags were previously disabled due to not being used by
WSL, however, after the release we recieved some reports of CEPH being
used externally. There is no known harm to keeping CEPH enabled.
Re-enable the previously used CONFIG_CEPH* flags to use in WSL for amd64
and arm64.

Enabling:
CONFIG_CEPH_LIB
CONFIG_CEPH_FS
CONFIG_CEPH_FS_POSIX_ACL

Signed-off-by: Kelsey Steele <kelseysteele@microsoft.com>

--- a/arch/arm64/configs/clover_defconfig
+++ b/arch/arm64/configs/clover_defconfig
@@ -1563,7 +1563,9 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_RFKILL_GPIO is not set
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
-# CONFIG_CEPH_LIB is not set
+CONFIG_CEPH_LIB=y
+# CONFIG_CEPH_LIB_PRETTYDEBUG is not set
+# CONFIG_CEPH_LIB_USE_DNS_RESOLVER is not set
 # CONFIG_NFC is not set
 CONFIG_NFC_NQ=y
 # CONFIG_PSAMPLE is not set
@@ -5721,7 +5723,8 @@ CONFIG_EROFS_FS_PCPU_KTHREAD_HIPRI=y
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
-# CONFIG_CEPH_FS is not set
+CONFIG_CEPH_FS=y
+CONFIG_CEPH_FS_POSIX_ACL=y
 # CONFIG_CIFS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
